# axum-backend-template

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/api/: app.rs  mod.rs
src/api/handlers/: cart_handler.rs  echo_handler.rs  mod.rs
src/api/ports/: echo_usecase_port.rs  mod.rs
src/api/routes/: cart.rs  echo.rs  health.rs  mod.rs
src/api/services/: cart_service.rs  cart_service_impl.rs  echo_service.rs  echo_service_impl.rs  mod.rs
src/api/usecases/: echo_usecase.rs  mod.rs
src/common/: mod.rs  request_context.rs
src/common/errors/: app_error.rs
src/common/http_client/: base_http_client.rs  http_client.rs  http_error.rs  http_response.rs  mod.rs
src/config/: mod.rs  settings.rs  settings_local.rs  settings_prod.rs  settings_stg.rs
src/config/base/: config.rs  endpoint.rs  mod.rs
src/domain/: cart.rs  echo.rs  mod.rs
src/errors/: app_error.rs
src/external_models/: cart.rs
src/handlers/: echo_handler.rs
src/infra/: app.rs  mod.rs
src/infra/handlers/: echo_handler.rs  mod.rs  not_found_handler.rs
src/infra/middlewares/: cors.rs
src/infra/routes/: echo.rs  health.rs
src/middlewares/: mod.rs  request_context.rs
src/routes/: echo.rs  health.rs
src/services/: echo_service_impl.rs  mod.rs
